<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.SignInActivity">
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:paddingTop="30dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="30dp" />
    <androidx.cardview.widget.CardView
        android:id="@+id/email_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardBackgroundColor="@color/card"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="15">

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="13"
                android:backgroundTint="@color/card"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColor="@color/text"
                android:textColorHint="@color/text" />

            <ImageView
                android:id="@+id/img_check_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/check"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/password_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardBackgroundColor="@color/card"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@+id/email_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="15">

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="13"
                android:backgroundTint="@color/card"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/text"
                android:textColorHint="@color/text" />

            <ImageView
                android:id="@+id/img_visibility_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/eye_off" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/check_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:weightSum="20"
        app:layout_constraintTop_toBottomOf="@+id/password_card">

        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:backgroundTint="@color/button"
            android:buttonTint="@color/text"
            android:drawable="@drawable/check"
            android:drawableTint="@color/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="12"
            android:text="@string/remember_me"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd"
            android:textColor="@color/text" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/test_button"
        android:text="@string/sign_in"
        android:textColor="@color/text"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        app:layout_constraintTop_toBottomOf="@+id/check_layout" />
    <LinearLayout
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:orientation="horizontal"
        android:weightSum="20"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in">

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_gravity="center"
            android:layout_weight="9"
            android:background="@color/text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/text"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_gravity="center"
            android:layout_weight="9"
            android:background="@color/text" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or">

        <ImageView
            android:id="@+id/img_facebook"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/img_google_plus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:src="@drawable/google_plus" />

        <ImageView
            android:id="@+id/img_twitter"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:src="@drawable/twitter" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/go_to_register"
            android:textAlignment="center"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/txt_create_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/create_new"
            android:textAlignment="center"
            android:textColor="@color/button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>