<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.SignUpActivity">
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="30dp" />
    <androidx.cardview.widget.CardView
        android:id="@+id/account_card"
        app:cardBackgroundColor="@color/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@+id/header">
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="15"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/account"
                android:hint="@string/username"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:backgroundTint="@color/card"
                android:layout_weight="13"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:visibility="gone"
                android:id="@+id/img_check_account"
                android:layout_gravity="center"
                android:src="@drawable/check"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/email_card"
        app:cardBackgroundColor="@color/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@+id/account_card">
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="15"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:id="@+id/email"
                android:backgroundTint="@color/card"
                android:layout_weight="13"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:visibility="gone"
                android:id="@+id/img_check_email"
                android:layout_gravity="center"
                android:src="@drawable/check"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/password_card_top"
        app:cardBackgroundColor="@color/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@+id/email_card">
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="15"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:id="@+id/password_top"
                android:layout_weight="13"
                android:backgroundTint="@color/card"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:visibility="gone"
                android:id="@+id/img_visibility_password_top"
                android:layout_gravity="center"
                android:src="@drawable/eye_off"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/password_card_bottom"
        app:cardBackgroundColor="@color/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@+id/password_card_top">
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="15"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:id="@+id/password_bottom"
                android:layout_weight="13"
                android:backgroundTint="@color/card"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:visibility="gone"
                android:id="@+id/img_visibility_password_bottom"
                android:layout_gravity="center"
                android:src="@drawable/eye_off"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="11"
        android:id="@+id/check_layout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password_card_bottom">
        <CheckBox
            android:id="@+id/cb_remember"
            android:backgroundTint="@color/button"
            android:drawableTint="@color/text"
            android:buttonTint="@color/text"
            android:layout_gravity="center_vertical"
            android:drawable="@drawable/check"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_weight="10"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            <TextView
                android:text="@string/privacy"
                android:textColor="@color/text"
                android:layout_margin="2dp"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/term_of_service"
                android:textColor="@color/button"

                android:textSize="14sp"
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:text="and"
                    android:textColor="@color/text"
                    android:textSize="14sp"
                    android:layout_margin="2dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/privacy_policy"
                    android:textColor="@color/button"
                    android:layout_margin="2dp"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:text="@string/sign_up"
        android:textColor="@color/text"
        android:id="@+id/btn_sign_up"
        android:background="@drawable/test_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        app:layout_constraintTop_toBottomOf="@+id/check_layout">
    </Button>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_login"
            android:layout_margin="2dp"
            android:textAlignment="center"
            android:textColor="@color/text" />
        <TextView
            android:id="@+id/txt_create_new"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>